compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__construct__typech_construct_struct_type_extra_field.snap
---
source: compiler/lume_typech/src/tests/check/construct.rs
description: "struct A {\n            foo: Boolean;\n        }\n\n        fn foo() {\n            let a = A { foo: false, bar: 0 };\n        }"
---
× error[LM4386]: unknown structure field
   ╭───────────
 5 │         fn foo() {
 6 │             let a = A { foo: false, bar: 0 };
   │                                     ^^^ type A has no field bar
 7 │         }
   ╰──
